# pubky-antfarm

./: .env-sample  .gitignore  Cargo.toml  LICENSE  README.md  config.default.toml  docker-compose.yml
.claude/skills/pubky-core-testnet/: SKILL.md
assets/issues/: pubky-sdk-pool-config.md
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/design-system/: TOKENS.md
dashboard/src/: AnalyticsView.tsx  App.tsx  AuthApproveModal.tsx  BatchEventsModal.tsx  BootstrapMark.tsx  CopyButton.tsx  CreateHomeserverModal.tsx  CreateUserModal.tsx  DhtMark.tsx  GraphView.tsx  HomeserverStatusMenu.tsx  HomeserverUsersView.tsx  HttpMark.tsx  IslandPill.tsx  PkarrMark.tsx  PkarrRecordIcon.tsx  PkarrRecordModal.tsx  ProcessPill.tsx  RootMark.tsx  SearchView.tsx  SignupInviteIcon.tsx  SignupInviteModal.tsx  SocialPostModal.tsx  ToastNotice.tsx  UserDetailsModal.tsx  UserEventsModal.tsx  activityMetrics.ts  api.ts  approveAuth.ts  eventContentFormat.ts  hubColors.ts  index.css  main.tsx  pkarr.ts  pkarrFormat.ts  privPathRefs.ts  pubky.ts  searchPubky.ts  styles.css  useActivity.ts  (+2 more)
dashboard/src/components/: StatusBadge.tsx  StatusDot.tsx
dashboard/src/lib/: toast.ts  (+1 more)
src/: config.rs  db.rs  homeservers.rs  main.rs  runtime.rs  simulator.rs  testnet.rs
src/commands/: homeserver.rs  keygen.rs  list.rs  mod.rs  seed.rs
src/control/: client.rs  mod.rs  server.rs
src/social/: common.rs  file.rs  follow.rs  identity.rs  mention.rs  mod.rs  post.rs  profile.rs  session.rs  social_post.rs  tag.rs
src/web/: mod.rs  server.rs  storage.rs
(+16 files in other folders)
