[package]
name = "pubky-antfarm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bip39 = "2"
clap = { version = "4", features = ["derive"] }
colored = "3"
futures-util = "0.3"
pubky-app-specs = { git = "https://github.com/pubky/pubky-app-specs" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
pubky-testnet = { git = "https://github.com/pubky/pubky-core" }
